fix image on mobile by setting width to 100%

--- a/css/alacran-studio.webflow.css
+++ b/css/alacran-studio.webflow.css
@@ -244,7 +244,8 @@ figcaption {
   transition: background-color .4s, opacity .4s, color .4s;
 }
 
-.button.cc-jumbo-button.cc-jumbo-white:hover, .button.cc-jumbo-button.cc-jumbo-white:active {
+.button.cc-jumbo-button.cc-jumbo-white:hover,
+.button.cc-jumbo-button.cc-jumbo-white:active {
   color: #f2f2f2;
   background-color: #05c7f3;
 }
@@ -576,7 +577,7 @@ figcaption {
   grid-row-gap: 60px;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-areas: ". . ."
-                       ". . .";
+    ". . .";
   margin-bottom: 120px;
 }
 
@@ -622,7 +623,7 @@ figcaption {
   grid-column-gap: 80px;
   grid-row-gap: 30px;
   grid-template: ". ."
-  / 2.5fr 1fr;
+    / 2.5fr 1fr;
   align-items: start;
   margin-top: 100px;
   margin-bottom: 100px;
@@ -651,7 +652,8 @@ figcaption {
   border-color: #e3e6eb;
 }
 
-.text-field:active, .text-field:focus {
+.text-field:active,
+.text-field:focus {
   border-color: #43464d;
 }
 
@@ -707,7 +709,7 @@ figcaption {
   grid-row-gap: 60px;
   text-align: center;
   grid-template: ". . ."
-  / 1fr 1fr 1fr;
+    / 1fr 1fr 1fr;
   margin-bottom: 120px;
 }
 
@@ -743,7 +745,7 @@ figcaption {
   grid-row-gap: 30px;
   grid-template-columns: 1fr;
   grid-template-areas: ". . ."
-                       ". . .";
+    ". . .";
   margin-bottom: 60px;
 }
 
@@ -768,9 +770,9 @@ figcaption {
   grid-column-gap: 30px;
   grid-row-gap: 30px;
   grid-template: "."
-                 "."
-                 "."
-                 / 1fr;
+    "."
+    "."
+    / 1fr;
   margin-bottom: 60px;
 }
 
@@ -839,7 +841,7 @@ figcaption {
   grid-column-gap: 80px;
   grid-row-gap: 30px;
   grid-template: ". ."
-  / 1fr 2fr;
+    / 1fr 2fr;
   align-items: start;
   margin-top: 100px;
   margin-bottom: 100px;
@@ -1006,7 +1008,7 @@ figcaption {
   grid-column-gap: 80px;
   grid-row-gap: 30px;
   grid-template: ". ."
-  / 1fr 2fr;
+    / 1fr 2fr;
   align-items: center;
   margin-bottom: 80px;
 }
@@ -1192,9 +1194,9 @@ figcaption {
     width: 80%;
     text-align: center;
     grid-template: ". ."
-                   ". ."
-                   ". ."
-                   / 1fr 1fr;
+      ". ."
+      ". ."
+      / 1fr 1fr;
     margin-left: auto;
     margin-right: auto;
   }
@@ -1208,8 +1210,8 @@ figcaption {
     grid-row-gap: 50px;
     text-align: center;
     grid-template: "."
-                   "."
-                   / 1fr;
+      "."
+      / 1fr;
     margin-left: auto;
     margin-right: auto;
   }
@@ -1221,18 +1223,18 @@ figcaption {
   .our-contacts {
     width: 80%;
     grid-template: "."
-                   "."
-                   "."
-                   / 1fr;
+      "."
+      "."
+      / 1fr;
     margin-left: auto;
     margin-right: auto;
   }
 
   .team-members {
     grid-template: ". ."
-                   ". ."
-                   ". ."
-                   / 1fr 1fr;
+      ". ."
+      ". ."
+      / 1fr 1fr;
   }
 
   .team-member-title-wrap {
@@ -1244,8 +1246,8 @@ figcaption {
     grid-row-gap: 50px;
     text-align: center;
     grid-template: "."
-                   "."
-                   / 1fr;
+      "."
+      / 1fr;
     margin-left: auto;
     margin-right: auto;
   }
@@ -1274,14 +1276,14 @@ figcaption {
     grid-row-gap: 50px;
     text-align: center;
     grid-template: "."
-                   "."
-                   / 1fr;
+      "."
+      / 1fr;
   }
 
   .about-grid.cc-about-2 {
     grid-template-columns: 1fr;
     grid-template-areas: "."
-                         ".";
+      ".";
   }
 
   .intro-text {
@@ -1312,7 +1314,8 @@ figcaption {
     padding: 15px;
   }
 
-  .section.cc-home-wrap, .section.cc-store-home-wrap {
+  .section.cc-home-wrap,
+  .section.cc-store-home-wrap {
     margin-left: 15px;
     margin-right: 15px;
   }
@@ -1348,7 +1351,8 @@ figcaption {
     padding-left: 0;
   }
 
-  .logo-link.w--current, .navigation-wrap {
+  .logo-link.w--current,
+  .navigation-wrap {
     background-color: rgba(0, 0, 0, 0);
   }
 
@@ -1368,12 +1372,12 @@ figcaption {
   .our-services-grid {
     grid-row-gap: 60px;
     grid-template: "."
-                   "."
-                   "."
-                   "."
-                   "."
-                   "."
-                   / 1fr;
+      "."
+      "."
+      "."
+      "."
+      "."
+      / 1fr;
   }
 
   .status-message.cc-no-data {
@@ -1385,7 +1389,8 @@ figcaption {
     padding: 30px;
   }
 
-  .text-field.cc-contact-field, .text-field.cc-textarea {
+  .text-field.cc-contact-field,
+  .text-field.cc-textarea {
     text-align: left;
   }
 
@@ -1470,7 +1475,8 @@ figcaption {
     padding-right: 20px;
   }
 
-  .menu-button, .menu-button.w--open {
+  .menu-button,
+  .menu-button.w--open {
     flex: none;
   }
 
@@ -1491,7 +1497,8 @@ figcaption {
     padding-bottom: 0;
   }
 
-  .status-message.cc-no-data, .contact-form-grid {
+  .status-message.cc-no-data,
+  .contact-form-grid {
     width: 100%;
   }
 
@@ -1501,19 +1508,20 @@ figcaption {
 
   .team-members {
     grid-template: "."
-                   "."
-                   "."
-                   "."
-                   "."
-                   "."
-                   / 1fr;
+      "."
+      "."
+      "."
+      "."
+      "."
+      / 1fr;
   }
 
   .project-details-grid {
     width: 100%;
   }
 
-  .blog-detail-header-wrap, .blog-item {
+  .blog-detail-header-wrap,
+  .blog-item {
     width: 100%;
     max-width: none;
   }
@@ -1521,17 +1529,23 @@ figcaption {
   .body {
     background-color: #fff;
   }
+
+  .team-pic.jorge-viramontes {
+    width: 100%;
+  }
 }
 
 #w-node-_86e64837-0616-515b-4568-76c147234d34-a3550467 {
   grid-area: 1 / 1 / 2 / 2;
 }
 
-#w-node-_86e64837-0616-515b-4568-76c147234d3f-a3550467, #w-node-_86e64837-0616-515b-4568-76c147234d41-a3550467 {
+#w-node-_86e64837-0616-515b-4568-76c147234d3f-a3550467,
+#w-node-_86e64837-0616-515b-4568-76c147234d41-a3550467 {
   grid-area: 1 / 2 / 2 / 3;
 }
 
-#w-node-_86e64837-0616-515b-4568-76c147234d4c-a3550467, #w-node-c0485342-c1f0-9657-96c2-91c01598bca7-a3550467 {
+#w-node-_86e64837-0616-515b-4568-76c147234d4c-a3550467,
+#w-node-c0485342-c1f0-9657-96c2-91c01598bca7-a3550467 {
   grid-area: 1 / 1 / 2 / 2;
 }
 
@@ -1684,7 +1698,8 @@ figcaption {
     grid-area: 3 / 1 / 4 / 2;
   }
 
-  #w-node-_3f61509a-fac7-b0d5-3763-509be70585a6-a355046c, #w-node-cb4222c2-e34c-f4e1-7796-79bb93a2fb15-a355046c {
+  #w-node-_3f61509a-fac7-b0d5-3763-509be70585a6-a355046c,
+  #w-node-cb4222c2-e34c-f4e1-7796-79bb93a2fb15-a355046c {
     grid-area: 2 / 1 / 3 / 2;
   }
 
@@ -1692,7 +1707,9 @@ figcaption {
     grid-area: 3 / 1 / 4 / 2;
   }
 
-  #w-node-_421df62a-c217-12af-eee8-27f88a387928-a355046e, #w-node-_421df62a-c217-12af-eee8-27f88a387928-a355046f, #w-node-_421df62a-c217-12af-eee8-27f88a387928-a3550470 {
+  #w-node-_421df62a-c217-12af-eee8-27f88a387928-a355046e,
+  #w-node-_421df62a-c217-12af-eee8-27f88a387928-a355046f,
+  #w-node-_421df62a-c217-12af-eee8-27f88a387928-a3550470 {
     grid-area: 2 / 1 / 3 / 2;
   }
 }
@@ -1738,5 +1755,3 @@ figcaption {
     grid-area: 5 / 1 / 6 / 2;
   }
 }
-
-
